  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading
NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading

3.1.1 2021/11/xx
  - addUser.js - fix not exiting on complete when certs defined
  - all - deal with usersElasticsearch being an array better

3.1.0 2021/10/04
  - all - support float field type
  - all - support Q-in-Q ether type
  - all - --insecure has consistent messaging now
  - all - Finally added elasticsearchBasicAuth/usersElasticsearchBasicAuth can be
          user:pass or base64(user:pass)
  - capture - s3 writer uses IMDSv2 (thanks fj604)
  - capture - dscp src/dst (issue #1626)
  - capture - refactor how udp tunnels are added, just normal parsers now
  - capture - initial GENEVE, VXLAN-GPE support
  - capture - initial IETF QUIC support
  - capture - fix interfaceOps crash (issue #1763)
  - release - much improved arkime_config_interfaces.sh (thanks arkaØm)
  - release - node 14.18.0
  - viewer - stop upload menu showing up when empty command
  - viewer - improve first load time by spliting bundle and lazy load items
  - viewer - combine multiple calls from UI into one call
  - viewer - added pcap expire debugging
  - viewer - uploadCommand can now use INSECURE-ORIGINALNAME to access uploaded filename
  - viewer - shortcut display improvements
  - viewer - shortcuts can be in arrays
  - viewer - shortcut wildcard support (issue #1554)
  - viewer - didn't decrypt pcap for large packets correctly (issue #1756)
  - viewer - support wiseURL for wise.js viewer plugin (issue #1758)
  - viewer - display "0" values
  - viewer - Test alert includes who requested it
  - viewer - fixed regex and floats not always working in array expressions
  - viewer - fix always putting cursor at end of input when selecting typeahead result
  - viewer - add typeahead results in search expression for values in a list