@@ -25,6 +25,8 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
 3.1.1 2021/11/xx
   - addUser.js - fix not exiting on complete when certs defined
   - all - deal with usersElasticsearch being an array better
+  - capture - increase max of pcapWriteSize, tpacketv3NumThreads
+  - capture - decrease max of maxESConns, maxESRequests
 
 3.1.0 2021/10/04
   - all - support float field type
